--- a/ev.html
+++ b/ev.html
@@ -1,14 +1,28 @@
 <title>Should the government subsidize electric vehicles?</title>
 <style>
-body {
+head {
   font-family: "Courier New", Courier, monospace;
   color: lime;
   background-color: black;
   font-size:40px;
+  font-weight:bold;
+}
+body {
+  font-family: "Courier New", Courier, monospace;
+  color: lime;
+  background-color: black;
+  font-size:20px;
+  font-weight:bold;
 }
 </style>
+<head>Should the Government Subsidize Electric Vehicles<br><br></head>
 <body>
- 
-placeholder
-
-</body>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+<body>
