--- a/ev.html
+++ b/ev.html
@@ -17,12 +17,5 @@ body {
 </style>
 <head>Should the Government Subsidize Electric Vehicles<br><br></head>
 <body>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
-  placeholder placeholder placeholder placeholder placeholder placeholder placeholder placeholder <br>
+  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tesla.com%2Fmodel3&psig=AOvVaw2Q-_ZBg3ZEDffnioUd0wg1&ust=1582658230920000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIi-6u3z6ucCFQAAAAAdAAAAABAD" alt="Tesla Model 3">
 <body>
