--- a/ev.html
+++ b/ev.html
@@ -17,5 +17,5 @@ body {
 </style>
 <head>Should the Government Subsidize Electric Vehicles<br><br></head>
 <body>
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.tesla.com%2Fmodel3&psig=AOvVaw2Q-_ZBg3ZEDffnioUd0wg1&ust=1582658230920000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCIi-6u3z6ucCFQAAAAAdAAAAABAD" alt="Tesla Model 3">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/2019_Tesla_Model_3_Performance_AWD_Front.jpg/1280px-2019_Tesla_Model_3_Performance_AWD_Front.jpg" alt="Tesla Model 3">
 <body>
