--- a/ev.html
+++ b/ev.html
@@ -17,5 +17,7 @@ body {
 </style>
 <head>Should the Government Subsidize Electric Vehicles<br><br></head>
 <body>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/2019_Tesla_Model_3_Performance_AWD_Front.jpg/1280px-2019_Tesla_Model_3_Performance_AWD_Front.jpg" alt="Tesla Model 3">
-<body>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/2019_Tesla_Model_3_Performance_AWD_Front.jpg/1280px-2019_Tesla_Model_3_Performance_AWD_Front.jpg" alt="Tesla Model 3 (BEV)"><br>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/DCA_06_2012_Chevy_Volt_4035.JPG/1024px-DCA_06_2012_Chevy_Volt_4035.JPG" alt ="Chevy Volt (PHEV)"><br>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9b/Toyota_PRIUS_S_2WD_%28DAA-ZVW51-AHXEB%29.jpg/800px-Toyota_PRIUS_S_2WD_%28DAA-ZVW51-AHXEB%29.jpg" alt="Toyota Prius (Hybrid)">
+  <body>
