--- a/wohnung.html
+++ b/wohnung.html
@@ -1,5 +1,24 @@
 <!DOCTYPE html>
 <style>
-
+head {
+  font-family: "Courier New", Courier, monospace;
+  color: lime;
+  background-color: black;
+  font-size:40px;
+  font-weight:bold;
+}
+body {
+  font-family: "Courier New", Courier, monospace;
+  color: lime;
+  background-color: black;
+  font-size:20px;
+  font-weight:bold;
+}
 </style>
 <title>Wohnung Projekt</title>
+<head>2 Schlafzimmer Wohnung in Dortmund<br><br></head>
+<body>
+Kaltmeite - 700 Euro <br>  
+Nebenkosten - 130 Euro <br>
+  
+<body>
