--- a/wohnung.html
+++ b/wohnung.html
@@ -21,5 +21,5 @@ body {
 Kaltmeite - 700 Euro <br>  
 Nebenkosten - 130 Euro <br>
 Kaution - 1400 Euro <br>
-<img src="https://github.com/emfisk/emfisk.github.io/immobillien.png">Die Immobilien<br>
+<img src="immobillien.png">Die Immobilien<br>
 <body>
