--- a/wohnung.html
+++ b/wohnung.html
@@ -16,11 +16,26 @@ body {
 }
 </style>
 <title>Wohnung Projekt</title>
-<head>1,5 Schlafzimmer Wohnung in Dortmund<br><br></head>
+<head>1,5 Schlafzimmer Wohnung in Dortmund, Am Bruchheck 20 44263 Dortmund, Deutschland<br><br></head>
 <body>
 Kaltmeite - 700 Euro <br>  
 Nebenkosten - 130 Euro <br>
 Kaution - 1400 Euro <br>
 <img src="immobillien.png">Die Immobilien<br>
 <img src="image1.png"><img src="image2.png"><img src="image4.png"><br><img src="image5.png"><img src="image6.png"><img src="image7.png><br>
+Geschäft:<br>
+  Bäckerei und Metzgerei: Bäcker Beckmann, 137 meters
+Alte Benninghofer Str. 29, 44263 Dortmund
+Man koennte Brot und Brötchen kaufen.
+<br>
+ Restaurants: American Dinner + Tapas Jedermanns (same building), Am Bruchheck 30 ~50 meters
+American Dinner hat Essen aus den USA. Es ist billig. Tapas Jedermanns hat Essen aus Spanien. Es is teurer als American Dinner. 
+<br>
+Fitness Möglichkeiten: Goystadion hat viele Fußballplätze. Auch könnte man laufen. <br>
+Einkaufen: Kiosk Kandeepan ~ 200 meters, Schlickeisen Antique-Shop (same building)
+Man könnte Süßigkeiten und Antiques kaufen.
+<br>
+Aktivitäten: Goystadion hat andere Aktivitäten. Man koennte Natur sehen.
+<br>
+Natur: Botanischer Garten Rombergpark hat Pflanzen
 <body>
