--- a/wohnung.html
+++ b/wohnung.html
@@ -22,7 +22,7 @@ Kaltmeite - 700 Euro <br>
 Nebenkosten - 130 Euro <br>
 Kaution - 1400 Euro <br>
 <img src="immobillien.png">Die Immobilien<br>
-<img src="image1.png"><img src="image2.png"><img src="image4.png"><br><img src="image5.png"><img src="image6.png"><img src="image7.png><br>
+<img src="image1.png"><img src="image2.png"><img src="image4.png"><br><img src="image5.png"><img src="image6.png"><img src="image7.png"><br>
 Geschäft:<br>
   Bäckerei und Metzgerei: Bäcker Beckmann, 137 meters
 Alte Benninghofer Str. 29, 44263 Dortmund
