--- a/wohnung.html
+++ b/wohnung.html
@@ -28,7 +28,7 @@ Geschäft:<br>
 Alte Benninghofer Str. 29, 44263 Dortmund
 Man koennte Brot und Brötchen kaufen.
 <br>
- Restaurants: American Dinner + Tapas Jedermanns (same building), Am Bruchheck 30 ~50 meters
+  Restaurants: <a href="https://american-dinner.de/"> American Dinner</a> + <a href="https://tapas-jedermanns.eatbu.com/?lang=en">Tapas Jedermanns </a> (same building), Am Bruchheck 30 ~50 meters
 American Dinner hat Essen aus den USA. Es ist billig. Tapas Jedermanns hat Essen aus Spanien. Es is teurer als American Dinner. 
 <br>
 Fitness Möglichkeiten: Goystadion hat viele Fußballplätze. Auch könnte man laufen. <br>
