--- a/wohnung.html
+++ b/wohnung.html
@@ -18,6 +18,7 @@ body {
 <title>Wohnung Projekt</title>
 <head>1,5 Schlafzimmer Wohnung in Dortmund, Am Bruchheck 20 44263 Dortmund, Deutschland<br><br></head>
 <body>
+  70 m<sup>2</sup> <br>
 Kaltmeite - 700 Euro <br>  
 Nebenkosten - 130 Euro <br>
 Kaution - 1400 Euro <br>
