--- a/wohnung.html
+++ b/wohnung.html
@@ -19,11 +19,13 @@ body {
 <head>1,5 Schlafzimmer Wohnung in Dortmund, Am Bruchheck 20 44263 Dortmund, Deutschland<br><br></head>
 <body>
   70 m<sup>2</sup> <br>
+Haustiere erlaubt <br>
+Kein Kellerraum <br>
 Kaltmeite - 700 Euro <br>  
 Nebenkosten - 130 Euro <br>
 Kaution - 1400 Euro <br>
 <img src="immobillien.png">Die Immobilien<br>
-<img src="image1.png"><img src="image2.png"><img src="image4.png"><br><img src="image5.png"><img src="image6.png"><img src="image7.png"><br>
+<img src="image1.png"><img src="image2.png"><img src="image4.png">Die  Küche hat ist einbau, und hat einen hochwertig Ofen und viele Schränke. Man könnte viel Essen backen und kochen. Auch hat sie eine Mikrowelle. <br><img src="image5.png"><img src="image6.png"><img src="image7.png"><br>
 Geschäft:<br>
   Bäckerei und Metzgerei: Bäcker Beckmann, 137 meters
 Alte Benninghofer Str. 29, 44263 Dortmund
