--- a/wohnung.html
+++ b/wohnung.html
@@ -27,18 +27,18 @@ Kaution - 1400 Euro <br>
 <img src="immobillien.png">Die Immobilien<br>
 <img src="image1.png">Der Wohnzimmer hat viel Raum. Man könnte Stühle oder Sofas haben.<br><img src="image2.png"><img src="image4.png">Die  Küche hat ist einbau, und hat einen hochwertig Ofen und viele Schränke. Man könnte viel Essen backen und kochen. Auch hat sie eine Mikrowelle. <br><img src="image5.png"><img src="image6.png"><br>Im Badezimmer kann man eine Dusche und eine Bade sehen. Die Wohnung hat eine Komplett Badezimmer und auch eine Toilette.<br>Die Wohnung hat einen Schlafzimmer, der hat eine gross Bett.<br><img src="image7.png"><br>
 Geschäft:<br>
-  Bäckerei und Metzgerei: Bäcker Beckmann, 137 meters
+ &#x2611; Bäckerei und Metzgerei: Bäcker Beckmann, 137 meters
 Alte Benninghofer Str. 29, 44263 Dortmund
 Man koennte Brot und Brötchen kaufen.
 <br>
-  Restaurants: <a href="https://american-dinner.de/"> American Dinner</a> + <a href="https://tapas-jedermanns.eatbu.com/?lang=en">Tapas Jedermanns </a> (same building), Am Bruchheck 30 ~50 meters
+&#x2611; Restaurants: <a href="https://american-dinner.de/"> American Dinner</a> + <a href="https://tapas-jedermanns.eatbu.com/?lang=en">Tapas Jedermanns </a> (same building), Am Bruchheck 30 ~50 meters
 American Dinner hat Essen aus den USA. Es ist billig. Tapas Jedermanns hat Essen aus Spanien. Es is teurer als American Dinner. 
 <br>
-Fitness Möglichkeiten: Goystadion hat viele Fußballplätze. Auch könnte man laufen. <br>
-Einkaufen: Kiosk Kandeepan ~ 200 meters, Schlickeisen Antique-Shop (same building)
+&#x2611; Fitness Möglichkeiten: Goystadion hat viele Fußballplätze. Auch könnte man laufen. <br>
+&#x2611; Einkaufen: Kiosk Kandeepan ~ 200 meters, Schlickeisen Antique-Shop (same building)
 Man könnte Süßigkeiten und Antiques kaufen.
 <br>
-Aktivitäten: Goystadion hat andere Aktivitäten. Man koennte Natur sehen.
+&#x2611; Aktivitäten: Goystadion hat andere Aktivitäten. Man koennte Natur sehen.
 <br>
-Natur: Botanischer Garten Rombergpark hat Pflanzen
+&#x2611; Natur: Botanischer Garten Rombergpark hat Pflanzen
 <body>
